--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <h1>
   {{title}}
+
 </h1>
+<!--
+<app-measurement-list></app-measurement-list>
+<app-measurement-calendar></app-measurement-calendar>
+-->
+
+<router-outlet></router-outlet>
